# services-infrastructure

G1/: .gitignore  ADAPTIVE_WORKFLOW_LOGIC.md  AI_DESIGNED_METRICS_SYSTEM.json  AI_METRICS_REVOLUTION_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  BUSINESS_SOLUTION_OVERVIEW.md  COMMUNICATION_ARCHITECTURE_ENHANCEMENT.md  COMPLETE_SDLC_WORKFLOW_ANALYSIS.md  CONTEXT_AWARENESS_ANALYSIS.md  CRITICAL_ISSUES_SUMMARY.md  DIRECT_PERSONA_VALIDATION.py  DIRECT_VALIDATION_REPORT.json  E2E_VALIDATION_REPORT.json  E2E_VALIDATION_TEST.py  END_TO_END_VALIDATION_REPORT.md  FOCUSED_E2E_TEST.py  G1_AI_PERSONA_METRICS_FRAMEWORK.md  HARDCODED_RULES_ANALYSIS.md  HIERARCHICAL_ARCHITECTURE_ENHANCEMENT_PLAN.md  IMPLEMENTATION_TRACKER.md  OPTIMAL_ARCHITECTURE_IMPLEMENTATION_COMPLETE.md  PERSONAS_TEMPLATE.md  PERSONA_ANALYSIS_AND_GAPS.md  PERSONA_ARCHITECTURE_ANALYSIS.md  PERSONA_DRIVEN_METRICS_SYSTEM.md  PURE_PERSONA_DRIVEN_VALIDATION.md  README.md  REPOSITORY_INTEGRATION_STRATEGY.md  REQUIREMENT_MODES_ANALYSIS.md  REQUIREMENT_SCENARIOS_ANALYSIS.md  SEVERITY_PRIORITY_CLASSIFICATION.md  SIMULATOR_PERSONA_ANALYSIS.md  SIMULATOR_TEST_SCENARIO.md  SOLUTION_ARCHITECTURE.html  SOLUTION_ARCHITECTURE.md  TECHNICAL_SOLUTION_ANALYSIS.md  VALIDATION_CONCLUSION_REPORT.md  WORKFLOW_ANALYSIS_MASTER_DOCUMENT.md  WORKFLOW_IMPLEMENTATION_PLAN.md  ai_metrics_orchestrator.py  (+26 more)
G1/.backup/: agent_based_workflow_orchestrator.py  persona_driven_workflow.py
G1/.github/: .copilot-log-config.js  copilot-instructions.md
G1/.github/workflows/: ai-manager-example.yml  ci-cd.yml  comprehensive-testing.yml  monitoring.yml  setup-secrets.yml
G1/backup/: pure_persona_driven_orchestrator_backup_20250828_130745.py
G1/config/: github-secrets.md  port-allocation.csv  runtime.json  service-discovery.yml  system.env  tao.yaml  workspace.json
G1/config/startup-scripts/: README.md  check-services.sh  oom.sh  run-services.sh  start-all-services.sh  start-tao-system.sh  stop-services.sh
G1/shared/: requirements.txt  secrets_config.py
